# brassclaw-home-assistant-skill

./: .gitignore  README.md  SKILL.md  package-lock.json  skill.md
.zenflow/tasks/audit-the-complete-codebase-thor-6f85/: plan.md
.zenflow/tasks/audit-the-whole-codebase-thoroug-7876/: investigation.md  plan.md
.zenflow/tasks/https-github-com-chtugha-ironcla-2669/: investigation.md  plan.md
.zenflow/tasks/install-test-debug-and-verify-th-634d/: investigation.md  plan.md
.zenflow/tasks/on-executing-a-task-the-python-s-72df/: plan.md
.zenflow/tasks/our-ironclaw-fork-was-rebranded-6a40/: plan.md
.zenflow/tasks/we-changed-a-lot-of-things-in-ou-4056/: plan.md  requirements.md  spec.md
.zenflow/tasks/we-need-tweak-the-whole-ironclaw-02b7/: plan.md
heartbeat/: HEARTBEAT.md  routines.md
local/heartbeat/: HEARTBEAT.md  routines.md
local/scripts/: install.sh
local/skills/: SKILL.md
mcp-server/: Cargo.toml
mcp-server/src/: main.rs
scripts/: install.sh  setup-duckdns.sh
skills/: SKILL.md
skills/config-modbus/: SKILL.md  skill.md
skills/control-search/: SKILL.md  skill.md
skills/diagnostics/: SKILL.md  skill.md
tools-src/ha-tool/: Cargo.toml  ha-tool.capabilities.json
tools-src/ha-tool/src/: api.rs  helpers.rs  lib.rs  shell.rs  types.rs
