[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"
description = "Home Assistant Model Context Protocol (MCP) server for BrassClaw"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
strsim = "0.11"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
